# HumanAwareness

./: .gitignore  README.md
pedestrian_detector/: CMakeLists.txt  CMakeLists.txt~  HeadAndShoulders.txt  StrongClassifierTreeStep4.txt  StrongClassifierTreeStep8.txt  classifier7floorNOPAD.txt  classifierINRIA4.txt  configuration.xml  configurationheadandshoulders.xml  configurationheadandshoulders.xml~  headandshoulders.txt  package.xml  partMasks.yaml
pedestrian_detector/camera_model/: config (another copy).yaml~  config (copy).yaml  config.yaml  config.yaml~  config_real.yaml
pedestrian_detector/config/: detector_params.yaml  follower_params.yaml  follower_params_global_map.yaml  follower_params_local_map.yaml  frames.yaml  tracker_params.yaml
pedestrian_detector/include/: cameraModel.hpp  common.h  controller.hpp  detectionProcess.hpp  imPadMex.hpp  wrappers.hpp
pedestrian_detector/include/detector/: chnsCompute.hpp  chnsPyramid.hpp  colorFeatures.hpp  featuresLUT.hpp  imPadMex.hpp  imResampleMex.hpp  opencvInterface.hpp  pedestrianDetector.hpp  rgbConvertMex.hpp  sse.hpp  strongClassifierTree.hpp
pedestrian_detector/include/follower/: controller.hpp
pedestrian_detector/include/tracker/: HungarianFunctions.hpp  cameraModel.hpp  detectionProcess.hpp  filtersAndUtilities.hpp  mmae.hpp  personMotionModel.hpp  utils.hpp
pedestrian_detector/launch/: bag_launcher.launch  bag_launcher.launch~  detector.launch  dragonfly2_left.yaml  dragonfly2_right.yaml  exporting.launch  exporting.launch~  pedestrian_detector.launch  pedestrian_detector.launch~  starteyes.launch  vizzy.rviz
pedestrian_detector/launch/calib/: calib_dragonfly2_left.yaml  calib_dragonfly2_right.yaml
pedestrian_detector/matlab/: MxArray.mexa64  README  darap.m  darap_interface_mex.cpp  darap_interface_mex.mexa64  darp_interface_mex.mexa64  main.m  pedestrian_detector.m  pedestrian_detector_interface_mex.cpp  pedestrian_detector_interface_mex.mexa64  test.m
pedestrian_detector/matlab/mc_convert/: mc_convert.cpp  mc_convert.hpp  mc_convert.mexa64  types.h
pedestrian_detector/matlab/mot/: readme.txt
pedestrian_detector/matlab/resource_constraint/: gaussian2d.m  imageProb.m  initializeDARAP.m  knapsack.cpp  knapsack.hpp  resource_allocation.cpp  resource_allocation.h
pedestrian_detector/matlab/tracking/: createNewTracks.m  deleteLostTracks.m  detectObjects.m  detectionToTrackAssignment.m  displayTrackingResults.m  initializeDetector.m  initializeTracks.m  predictNewLocationsOfTracks.m  readFrame.m  setupSystemObjects.m  updateAssignedTracks.m  updateUnassignedTracks.m
pedestrian_detector/meshes/: dice.stl
pedestrian_detector/msg/: DetectionList.msg  DetectionList.msg~  Features.msg
pedestrian_detector/src/: cameraModel.cpp  chnsCompute.cpp  chnsPyramid.cpp  common.cpp  controller.cpp  convConst.cpp  detectionProcess.cpp  gradientMex.cpp  main.cpp  pedestrianDetector.cpp  readFiles.cpp  strongClassifierTree.cpp
pedestrian_detector/src/auto_tracker/: closest_follow.cpp
pedestrian_detector/src/detector/: chnsCompute.cpp  chnsPyramid.cpp  colorFeatures.cpp  configuration.xml  convConst.cpp  getScales.cpp  gradientMex.cpp  main.cpp  opencvInterface.cpp  pedestrianDetector.cpp  readFiles.cpp  rgbConvert.cpp  strongClassifierTree.cpp  wrappers.cpp
pedestrian_detector/src/follower/: controller.cpp  main.cpp
pedestrian_detector/src/tracker/: cameraModel.cpp  detectionProcess.cpp  filtersAndUtilities.cpp  main.cpp  personMotionModel.cpp  tracker.cpp  tracker.h
pedestrian_detector/src/tracker/tracker_lib/: HungarianFunctions.cpp  cameraModel.cpp  detectionProcess.cpp  filtersAndUtilities.cpp  mmae.cpp  personMotionModel.cpp  utils.cpp
pedestrian_detector/src/tracker/tracker_test/: nonlinearanalyticconditionalgaussianodo.h  tracker.cpp  tracker.h  tracker_node.cpp  tracker_node.h
pedestrian_detector/src/viewer/: viewer.cpp
